--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,11 @@ dependencies:
   url_launcher: ^6.0.9
   flutter_screenutil: 4.0.2+3
   velocity_x: ^3.3.0
-  form_field_validator: ^1.0.1
+  form_field_validator: ^1.1.0
   fancy_shimmer_image:
   flutter_staggered_animations: "^1.0.0"
   cached_network_image:
-  get_it: ^4.0.4
+  get_it: ^7.2.0
   flutter_staggered_grid_view: ^0.3.3
   transparent_image: ^1.0.0
   smooth_star_rating: 1.1.1
@@ -70,6 +70,7 @@ dependencies:
   hive: ^2.0.5
   hive_flutter: ^1.1.0
   connectivity: ^3.0.6
+  logger: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
@@ -86,7 +87,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 dependency_overrides:
 # For information on the generic Dart part of this file, see the
